[package]
name = "Zombie-Microbes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
rand = "0.8.5"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d", "parallel" ] }
#bevy-inspector-egui = "0.21.0"
bevy_vector_shapes = "0.6.0"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

#[dependencies.wasm-bindgen]
#version = "0.2.89"
#features = ["serde-serialize"]
#
#[target.x86_64-pc-windows-gnu]
#linker = "x86_64-w64-mingw32-gcc"
#[lib]
#crate-type = ["cdylib", "rlib"]